# card-identifier

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Dockerfile  Makefile  Pipfile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  test.yml
card_identifier/: __init__.py  config.py  data.py  main.py  stats.py  storage.py  util.py
card_identifier/application/: __init__.py
card_identifier/cards/: __init__.py  base.py
card_identifier/cards/pokemon/: __init__.py  api_client.py
card_identifier/cli/: card_data.py  create_dataset.py  main.py  random_state.py  trim_dataset.py
card_identifier/dataset/: __init__.py  generator.py
card_identifier/dataset/metadata/: __init__.py
card_identifier/dataset/storage/: __init__.py
card_identifier/games/pokemon/: __init__.py
card_identifier/image/: __init__.py  background.py  meta.py  transformers.py
card_identifier/metadata/: __init__.py
card_identifier/model/: __init__.py
card_identifier/pokemon/: __init__.py
card_identifier/storage/: __init__.py  filesystem.py
deploy/dataset_generator/: Dockerfile
deploy/model_generator/: Dockerfile
diagrams/: architecture.puml  card_identifier.puml
docs/: model_training.md
image/: __init__.py  background.py  transformers.py
notebooks/: gen_model.ipynb  pokemon.ipynb  xfer_model.ipynb
pokemon/: __init__.py
scripts/: label_image.py  pokemon_sets.py  run_mkimgclsfr.sh
scripts/streamlit/: foo.py
tests/: test_background.py  test_card_manager.py  test_cli.py  test_dataset_builder.py  test_dataset_builder_failures.py  test_dataset_card_map_io.py  test_dataset_generator.py  test_dataset_scan.py  test_dataset_symlinks.py  test_get_legal_sets.py  test_label_image.py  test_storage.py  test_transformers.py  test_util.py
