[tool.poetry]
name = "collectable-card-identifier"
version = "0.1.0"
description = ""
authors = ["Caitlyn O'Hanna <caitlyn.ohanna@gmail.com>"]
readme = "README.md"
packages = [{include = "card_identifier"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
Pillow = "^9.2.0"
pokemontcgsdk = "^3.4.0"
numpy = "^1.23.2"
scikit-image = "^0.19.3"
retrying = "^1.3.3"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
streamlit = "*"

[tool.poetry.scripts]
mkdataset = "card_identifier.cli.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
